--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,8 +21,11 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+          
       - name: npm install
         run : npm install
+      - name: Trivy file scan
+        run: trivy fs . > trivyfs.txt
      
 
       # If you wish to fail your job when the Quality Gate is red, uncomment the
