--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,8 +24,21 @@ jobs:
           
       - name: npm install
         run : npm install
+        
       - name: Trivy file scan
         run: trivy fs . > trivyfs.txt
+
+      - name: Docker build and push
+        run:  |
+          docker build -t tic-tac-toe .
+          docker tag tic-tac-toe gitya/tic-tac-toe:latest 
+          docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
+          docker push gitya/tic-tac-toe:latest
+        env:
+          DOCKER_CLI_ACI: 1
+          
+          
+        
      
 
       # If you wish to fail your job when the Quality Gate is red, uncomment the
