--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,10 +36,13 @@ jobs:
           docker push gitya/tic-tac-toe:latest
         env:
           DOCKER_CLI_ACI: 1
-          
-          
+
+      - name: Image scan
+        run: trivy image gitya/tic-tac-toe:latest > trivyimage.txt
         
-     
+      
+          
+
 
       # If you wish to fail your job when the Quality Gate is red, uncomment the
       # following lines. This would typically be used to fail a deployment.
