--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,6 +39,20 @@ jobs:
 
       - name: Image scan
         run: trivy image gitya/tic-tac-toe:latest > trivyimage.txt
+
+  deploy:
+    needs: build-analyze-scan
+    runs-on: [self-hosted]
+    steps:
+      - name: docker pull image
+        run: docker pull gitya/tic-tac-toe:latest
+        
+      - name: Image scan
+        run: trivy image gitya/tic-tac-toe:latest > trivyimagedeploy.txt  
+
+      - name: Deploy to container
+        run: docker run -d --name game -p 3000:3000 gitya/tic-tac-toe:latest
+        
         
       
           
