--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,11 +52,12 @@ jobs:
 
       - name: Deploy to container
         run: docker run -d --name game -p 3000:3000 gitya/tic-tac-toe:latest
-        
-        
-      
-          
 
+      - name: Update kubeconfig
+        run: aws eks --region ap-south-1 update-kubeconfig --name EKS_CLOUD
+
+      - name: Deploy to Kubernetes
+        run: kubectl apply -f deployment-service.yml
 
       # If you wish to fail your job when the Quality Gate is red, uncomment the
       # following lines. This would typically be used to fail a deployment.
