--- a/.github/workflows/build1.yml
+++ b/.github/workflows/build1.yml
@@ -16,48 +16,17 @@ jobs:
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
 
-      - name: Build and analyze with SonarQube
-        uses: sonarsource/sonarqube-scan-action@master
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-          
-      - name: npm install
-        run : npm install
-        
-      - name: Trivy file scan
-        run: trivy fs . > trivyfs.txt
-
-      - name: Docker build and push
-        run:  |
-          docker build -t tic-tac-toe .
-          docker tag tic-tac-toe gitya/tic-tac-toe:latest 
-          docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
-          docker push gitya/tic-tac-toe:latest
-        env:
-          DOCKER_CLI_ACI: 1
-
-      - name: Image scan
-        run: trivy image gitya/tic-tac-toe:latest > trivyimage.txt
-
-  deploy:
-    needs: build-analyze-scan
-    runs-on: [self-hosted]
-    steps:
-      - name: docker pull image
-        run: docker pull gitya/tic-tac-toe:latest
-        
-      - name: Image scan
-        run: trivy image gitya/tic-tac-toe:latest > trivyimagedeploy.txt  
-
       - name: Deploy to container
-        run: docker run -d --name game -p 3000:3000 gitya/tic-tac-toe:latest
+        run: 
+          docker stop game
+          docker rm game
+            
 
       - name: Update kubeconfig
         run: aws eks --region ap-south-1 update-kubeconfig --name EKS_CLOUD
 
       - name: Deploy to Kubernetes
-        run: kubectl apply -f deployment-service.yml
+        run: kubectl delete -f deployment-service.yml
 
 
 
