--- a/.github/workflows/build1.yml
+++ b/.github/workflows/build1.yml
@@ -17,7 +17,7 @@ jobs:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
 
       - name: Deploy to container
-        run: 
+        run: | 
           docker stop game
           docker rm game
             
